# image_processor

./: README.md
image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/Executor/: Executor.cpp  Executor.h
image_processor/filters/: crop.cpp  crop.h  edge_det.cpp  edge_det.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h  weight_matrix.cpp  weight_matrix.h
image_processor/image/: image.cpp  image.h
image_processor/processor/: image_reader.cpp  image_reader.h
